# evidently_taxi_monitoring

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py  step_1_download_data.py  step_2_load_and_process_data.py  step_3_train_and_evaluate_model.py  step_4_generate_report.py
src/utils/: logging.py  timestamp.py
